# sequence-alignment

./: .gitignore  CMakeLists.txt  CudaBasicNW.cu  README.md  main.cpp  nw_strategy.h  requirements.txt  run_system_tests.py  test_nw.cpp
include/: ISequenceAligner.h  NeedlemanWunsch.h
kernels/: db_search.cu  nw_basic.cu  nw_wavefront.cu
src/: AlignerFactory.h  NeedlemanWunsch.cpp  main.cpp  nw.cpp  sequence_aligner
src/cpu/: NeedlemanWunsch.cpp
src/gpu/: NeedlemanWunsch.cu
test/: CMakeLists.txt  test_main.cpp
